--- a/NEWS
+++ b/NEWS
@@ -1400,3 +1400,8 @@ taking ParamPrior$mu.mu as a vector, rather than a scalar)
 version 1.9.19 (2020-02-16)
 - Adds a while loop in BASiCS_Sim to ensure it doesn't fail if some
   generated cells have zero counts.
+
+version 1.9.20 (2020-02-16)
+- Fix bug in handling of tail probability tests that meant probabilities
+  were not calculated correctly when Epsilon* = 0.
+
