--- a/NEWS
+++ b/NEWS
@@ -1444,3 +1444,8 @@ version 2.0.0 (2020-04-01)
 version 1.99.0 (2020-04-07)
 - Minor changes in vignette to increase figure sizes
 - Version number updated to follow Bioc guidelines
+
+version 1.99.1 (2020-04-14)
+- Minor change in documentation of `BASiCS_VarianceDecomp` to use `ggplot2` as
+reference linl (instead of `RColorBrewer`)
+link to
