--- a/NEWS
+++ b/NEWS
@@ -1492,3 +1492,7 @@ calibration fails. This is now set to `ProbThreshold` (not 0.9)
 
 version 2.1.5 (2020-08-05)
 - Minor change on the definition of `OrderVariable` within `BASiCS_DetectVG`
+
+version 2.1.6 (2020-08-05)
+- Prevents usage of `BASiCS_VarThresholdSearchVG` when using residual
+overdispersion parameters
