More text for epsilonthreshold

--- a/NEWS
+++ b/NEWS
@@ -1501,7 +1501,8 @@ version 2.1.7 (2020-09-01)
 - Bugfix in format method for ResultVG class.
 - For `BASiCS_PlotDE`, if only one plot is produced, the plot is returned as
   a bare ggplot object rather than using `cowplot::plot_grid`
-- Added `EpsilonThreshold` argument for `BASiCS_DetectHVG` and `BASiCS_DetectLVG`
+- Added `EpsilonThreshold` argument for `BASiCS_DetectHVG` and `BASiCS_DetectLVG`.
+  This uses a threshold on epsilon values to identify LVGs and HVGs.
 - Deprecated `newBASiCS_Data` and the `format` methods for Results classes.
   For the latter, use `as.data.frame` instead.
 - Improved documentation for BASiCS_ResultVG class
