--- a/NEWS
+++ b/NEWS
@@ -1533,3 +1533,6 @@ version 2.1.9 (2020-09-28)
 
 version 2.1.10 (2020-09-30)
 - Documents `Threads` argument.
+
+version 2.1.11 (2020-09-30)
+- Updated documentation for `Threads` in `BASiCS_MCMC` to indicate default value. 
