Fix documentation and add error condition for multicoreparam

--- a/NEWS
+++ b/NEWS
@@ -1536,3 +1536,7 @@ version 2.1.10 (2020-09-30)
 
 version 2.1.11 (2020-09-30)
 - Updated documentation for `Threads` in `BASiCS_MCMC` to indicate default value. 
+
+version 2.1.12 (2020-10-01)
+- Add support for divide and conquer inference with `BASiCS_DivideAndConquer`
+  function. Add support for this function to `BASiCS_MCMC`
