--- a/NEWS
+++ b/NEWS
@@ -1539,3 +1539,6 @@ version 2.1.11 (2020-09-30)
 
 version 2.1.12 (2020-10-01)
 - Remove unused DelayedArray call from tests
+
+version 2.1.13 (2020-10-05)
+- Add PriorParam argument to `BASiCS_MCMC`
