--- a/NEWS
+++ b/NEWS
@@ -1546,3 +1546,6 @@ version 2.1.13 (2020-10-05)
 version 2.1.14 (2020-10-08)
 - Add support for divide and conquer inference with `BASiCS_DivideAndConquer`
   function. Add support for this function to `BASiCS_MCMC`
+- Add `BASiCS_MockSCE` function to create a SingleCellExperiment 
+  object with arbitrary dimensions.
+- Fix Makevars warning relating to PKG_CXXFLAGS
