--- a/NEWS
+++ b/NEWS
@@ -1553,7 +1553,7 @@ version 2.1.14 (2020-10-08)
 version 2.1.16 (2020-10-22)
 - Updates `.BASiCS_MCMC_Start` to use different starting values when an 
 empirical Bayes prior is assigned to mu
-- Adds `log.scale` parameter to  `.EmpiricalBayesMu`
+- Adds `log_scale` parameter to  `.EmpiricalBayesMu`
 - Fixes small bug in `.BASiCS_MCMC_Start`
 - Updates unit tests linked to the change in `.BASiCS_MCMC_Start`
 - Adds fixed seeds to `test_divide_and_conquer.R`
