--- a/NEWS
+++ b/NEWS
@@ -1570,3 +1570,6 @@ version 2.3.2 (2021-04-14)
 
 version 2.3.3: (2021-04-14)
 - Version bump to trigger new build
+
+version 2.3.4: (2021-04-18)
+- Add missing import from scran
