--- a/NEWS
+++ b/NEWS
@@ -1584,3 +1584,7 @@ version 2.5.2 (2021-08-11)
 
 version 2.5.3 (2021-08-11)
 - Add GeneExponent and CellExponent settings for divide and conquer.
+
+version 2.5.4 (2021-08-24)
+- Ensure ordering of cells and genes in chains is consistent with input data
+  when using divide and conquer
